# claude-code-permissions-hook

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config_test.sh  example.toml  improve_prompt.txt  test_config.sh
docs/: CHANGELOG.md  INSTALL.md  USAGE.md  configuration-guide.md  tool-input-schemas.md
src/: auditing.rs  config.rs  decomposer.rs  hook_io.rs  lib.rs  main.rs  matcher.rs
tests/: README.md  bash_compound_and.json  bash_compound_or.json  bash_echo_simple.json  bash_for_loop.json  bash_rm_chained.json  bash_while_loop.json  edit_allowed.json  glob_allowed.json  grep_allowed.json  integration_test.rs  test_config.toml  test_hook.py  webfetch_allowed.json
