[package]
name = "claude-code-permissions-hook"
version = "0.1.0"
edition = "2024"
authors = ["Korny Sietsma <korny@sietsma.com>"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
derive_builder = "0.20.2"
lazy_static = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
regex = "1.12.2"
nix = { version = "0.30.1", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
[dev-dependencies]
pretty_assertions = "1.4.1"
